# Haggressive

./: .gitignore  Haggressive.cabal  README.md  agg_words.csv  cabal.sandbox.config  delete.hs  dutch-stop-words.txt  haggressive (Case Conflict).cabal~  haggressive.aux  haggressive.cabal  haggressive.cabal~  haggressive.hp  haggressive.prof  haggressive.ps  non_agg_words.csv  resultsK.csv  resultsK_backup.csv  words.csv  words.csv~
.cabal-sandbox/: add-source-timestamps  world
.cabal-sandbox/x86_64-linux-ghc-7.8.3-packages.conf.d/: HUnit-1.2.5.2-5968ced93139d48b488414df902b5d37.conf  OneTuple-0.2.1-323b42d8715807c42d7e5cf1a0d99a8c.conf  PSQueue-1.1-5f123c17086233ee6be9c8bf062c8f17.conf  QuickCheck-2.7.6-0fec49b1ab303cf6b3190ff633a3b151.conf  attoparsec-0.12.1.2-1b3fa4a577ce1ab566211966b3a338f8.conf  blaze-builder-0.3.3.4-02988d6a9a1bff3423db1a4112415cf9.conf  cassava-0.4.2.0-eb74ffab60bd05d889e69d1a497d7793.conf  fingertree-0.1.0.0-1c122c99d326bb7932759005d3df21cb.conf  haggressive-0.1.0.0-b5f095c620befb6b0e4524cfe58e8a80.conf  hashable-1.2.2.0-ad662458cc9782e2c8923d91c8abb5f8.conf  heap-1.0.0-54b4c1862d0cc6a05c177b44aeb66c1e.conf  hstats-0.3-bb97724152d467d9f4b4b50f2aa159ef.conf  package.cache  primitive-0.5.4.0-e91b9cbcda7189c707434ec8b33ea6c2.conf  scientific-0.3.3.2-579ae4c338e43be586effbbb991a6afb.conf  split-0.2.2-7c6e2bd13c1e04b85cc7ee759efb1a08.conf  text-1.2.0.0-ffab9bda69053aae90caff0c3f8721f6.conf  (+5 more)
hstats-0.3/: hstats.cabal
pure-priority-queue-0.14/: LICENSE  pure-priority-queue.cabal
src/: Haggressive.hs~  tests.hs
src-exe/: Main.hs  Main.hs~
src-lib/: #Hag.hs#  .#Hag.hs  Evaluation.hs  Evaluation.hs~  Hag.hs  Hag.hs~  Hag1.hs  Hag_backup.hs  Helpers.hs  Main.hs~  Outtakes.hs  Outtakes.hs~  Preprocess.hs  Tweet.hs~  Tweethelpers.hs  Tweethelpers.hs~  Tweets.hs  removeComments.pl
src-lib/Haggressive/: #Main.hs#  Main.hs~
tweets/: fold_0.txt  fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt  fold_5.txt  fold_6.txt  fold_7.txt  fold_8.txt  fold_9.txt
tweetsTest/: #fold_0.txt#  fold_0.txt  fold_1.txt
(+533 files in other folders)
