name:                 haggressive
version:              0.1.0.0
synopsis:             Aggression analysis for Tweets on Twitter
description:          Aggression analysis for Tweets on Twitter
homepage:             http://github.io/pold87/Haggressive
license:              GPL-2
license-file:         LICENSE
author:               Volker Strobel
maintainer:           volker.strobel87@gmail.com
-- copyright:           
category:             Web
build-type:           Simple
-- extra-source-files:  
cabal-version:        >=1.10



-- TODO: possibly remove library again and use only executable
library
  hs-source-dirs:      src-lib
  build-depends:       base >=4.7 && <5,
                       vector,
                       containers,
                       Cabal,
                       HUnit,
                       text,
                       cassava,
                       tuple,
                       bytestring, 
                       directory,
                       tokenize,
                       heap,
                       fingertree,
                       PSQueue
  exposed-modules:     Hag, Preprocess, Tweethelpers, Evaluation
  default-language:    Haskell2010
  ghc-options: -fllvm

--    -fprof-auto
--    -threaded
--    "-with-rtsopts=-N -p -s -h -i0.1"

executable haggressive
  main-is:              Main.hs
  build-depends:        base, haggressive, Cabal, HUnit
  hs-source-dirs:       src-exe
  default-language:     Haskell2010
  ghc-options: -fllvm
--    -fprof-auto
--    -threaded
--    "-with-rtsopts=-N -p -s -h -i0.1"
test-suite tests
  type:                 detailed-0.9
  test-module:          My
  hs-source-dirs:       testsuite/tests
  build-depends:        base
                      , haggressive
                      , HUnit
                      , containers
                      , vector
                      , Cabal
                      , tuple
  default-language:     Haskell2010